--- a/src/routes/HomePage.module.css
+++ b/src/routes/HomePage.module.css
@@ -33,6 +33,10 @@
   flex-direction: column;
   margin: 0px;
   padding: 0px;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
 }
 
 .h2,
@@ -59,7 +63,7 @@
 .wallet {
   color: white;
   font-size: 35px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   margin-top: 50px;
   margin-bottom: 0px;
 }
